--- a/style.css
+++ b/style.css
@@ -1,5 +1,21 @@
 body {
     margin: 0;
     background-color: #1C1C1C;
-    color: white
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 75px 0;
+}
+
+#app-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #1F2937;
+    width: 550px;
+    height: 550px;
+    padding: 0 50px;
+    border-radius: 15px;
 }
