--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Karla";
+    src: url(fonts/Karla-VariableFont_wght.ttf);
+}
+
 body {
     margin: 0;
     background-color: #1C1C1C;
@@ -7,6 +12,7 @@ body {
     align-items: center;
     justify-content: center;
     padding: 75px 0;
+    font-family: "Karla";
 }
 
 #app-body {
