--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@
     font-style: normal
 }
 
+@font-face {
+    font-family: "Inter";
+    src: url(fonts/Inter.ttf);
+}
+
 body {
     margin: 0;
     background-color: #1C1C1C;
@@ -21,6 +26,7 @@ body {
     align-items: center;
     justify-content: center;
     padding: 75px 0;
+    font-family: "Inter";
 }
 
 #app-body {
@@ -38,6 +44,12 @@ h1 {
     font-family: "Karla";
     font-weight: bold;
     font-size: 40px;
+}
+
+h2 {
+    font-family: "Inter";
+    font-weight: normal;
+    color: #D5D4D8;
 }
 
 .green-text {
