--- a/style.css
+++ b/style.css
@@ -44,14 +44,30 @@ h1 {
     font-family: "Karla";
     font-weight: bold;
     font-size: 40px;
+    margin-bottom: 5px;
 }
 
 h2 {
+    margin-top: 0;
+    margin-bottom: 50px;
     font-family: "Inter";
     font-weight: normal;
     color: #D5D4D8;
+    font-size: 20px;
 }
 
 .green-text {
     color: #4ADF86
+}
+
+.btn {
+    width: 178px;
+    height: 42px;
+    background-color: #10B981;
+    border: none;
+    font-family: "Inter";
+    font-weight: normal;
+    color: white;
+    font-size: 16px;
+    border-radius: 5px;
 }
