--- a/style.css
+++ b/style.css
@@ -76,3 +76,14 @@ h2 {
     font-size: 16px;
     border-radius: 5px;
 }
+
+#results-div {
+    border-top: 1px solid #2F3E53;
+    width: 446px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#results-field {
+    width: 
+}
