--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@ body {
     align-items: center;
     justify-content: center;
     background-color: #1F2937;
-    width: 550px;
-    height: 550px;
+    width: 600px;
+    height: 600px;
     border-radius: 15px;
 }
 
@@ -81,6 +81,7 @@ h2 {
     border-top: 1px solid #2F3E53;
     width: 446px;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
 
@@ -89,8 +90,8 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 211px;
-    height: 39px; 
+    width: 100%;
+    height: 45px; 
     background-color: #273549;
     color: #55F991;
     border-radius: 5px;
