--- a/style.css
+++ b/style.css
@@ -56,48 +56,19 @@ h2 {
     font-size: 20px;
 }
 
-.toggle {
-    position: relative;
-    display: inline-block;
-    width: 100px;
-    height: 52px;
-    background-color: #10B981;
-    border-radius: 30px;
-    border:2px solid gray;
-}
-
-.toggle:after {
-    content: '';
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: gray;
-    top: 1px;
-    left: 1px;
-    transition: all 0.5s;
-}
-
-.toggle-text {
-    font-weight: bold;
-}
-
-.checkbox:checked + .toggle::after {
-    left : 49px;
-}
-
-.checkbox:checked + .toggle {
-    background-color: #D5D4D8;
-}
-
-.checkbox {
-    display: none;
-}
-
 .green-text {
     color: #4ADF86
 }
-/* align text left on the button */
+
+input[type="checkbox"].toggle {
+    opacity: 0;
+    position: absolute;
+}
+
+input[type="checkbox"].toggle:checked + label {
+    color: #4ADF86;
+}
+
 .btn {
     display: flex;
     justify-content: flex-start;
@@ -133,4 +104,5 @@ h2 {
     background-color: #273549;
     color: #55F991;
     border-radius: 5px;
+    cursor: pointer;
 }
