--- a/style.css
+++ b/style.css
@@ -63,10 +63,50 @@ h2 {
 input[type="checkbox"].toggle {
     opacity: 0;
     position: absolute;
+    left:-9000px;
+    top: -9000px;
+}
+
+input[type="checkbox"].toggle + label {
+    position: relative;
+    display: flex;
+    align-items: center;
+    font-size: 1.2em;
+    color: #F43F5E;
+    margin: 0.3em;
+    cursor: pointer;
+}
+
+input[type="checkbox"].toggle + label::before {
+    content: "";
+    width: 2em;
+    height: 1em;
+    background-color: #FDA4AF;
+    border-radius: 1em;
+    margin-right: 0.5em;
+}
+
+input[type="checkbox"].toggle + label::after {
+    position: absolute;
+    left: 0.1em;
+    content: "";
+    width: 0.9em;
+    height: 0.9em;
+    background-color: #E11D48;
+    border-radius: 1em;
+}
+
+input[type="checkbox"].toggle:checked + label::after {
+    transform: translateX(100%);
+    background-color: #10B981;
 }
 
 input[type="checkbox"].toggle:checked + label {
     color: #4ADF86;
+}
+
+input[type="checkbox"].toggle:checked + label::before {
+    background-color: #D1FAE5;
 }
 
 .btn {
