--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ input[type="checkbox"].toggle + label {
     display: flex;
     align-items: center;
     font-size: 1.2em;
-    color: #F43F5E;
+    color: #D5D4D8;
     margin: 0.3em;
     cursor: pointer;
 }
@@ -84,6 +84,7 @@ input[type="checkbox"].toggle + label::before {
     background-color: #FDA4AF;
     border-radius: 1em;
     margin-right: 0.5em;
+    transition: 200ms ease-in-out;
 }
 
 input[type="checkbox"].toggle + label::after {
@@ -94,6 +95,7 @@ input[type="checkbox"].toggle + label::after {
     height: 0.9em;
     background-color: #E11D48;
     border-radius: 1em;
+    transition: 200ms ease-in-out;
 }
 
 input[type="checkbox"].toggle:checked + label::after {
@@ -101,8 +103,8 @@ input[type="checkbox"].toggle:checked + label::after {
     background-color: #10B981;
 }
 
-input[type="checkbox"].toggle:checked + label {
-    color: #4ADF86;
+input[type="checkbox"].toggle:focus + label::before {
+    outline: 1px solid white;
 }
 
 input[type="checkbox"].toggle:checked + label::before {
@@ -124,6 +126,7 @@ input[type="checkbox"].toggle:checked + label::before {
     color: white;
     font-size: 16px;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 #results-div {
